# csv-ops

./: CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml  release.yml
benches/: mask.rs  replace.rs  similarity.rs
benches/common/: mod.rs
docs/commands/: README.md  convert.md  extract.md  flag.md  info.md  mask.md  replace.md  similarity.md  split.md
src/: column.rs  config.rs  error.rs  lib.rs  main.rs  mask.rs  rule_id.rs  stats.rs  stats_report.rs  strategy.rs
src/cli/: convert.rs  extract.rs  flag.rs  info.rs  mask.rs  mod.rs  replace.rs  similarity.rs  split.rs
src/commands/: mod.rs
src/commands/convert/: mod.rs
src/commands/extract/: mod.rs  rule.rs  transform.rs
src/commands/flag/: mod.rs  transform.rs
src/commands/info/: report.rs
src/commands/mask/: config.rs  mod.rs
src/commands/replace/: collision.rs  config.rs  mod.rs  rule.rs
src/commands/similarity/: config.rs  dict.rs  mod.rs  transform.rs
src/commands/split/: mod.rs  transform.rs
src/convert/: mod.rs
src/extract/: config.rs  mod.rs  rule.rs  stats.rs  transform.rs
src/extract/config/: tests.rs
src/extract/transform/: tests.rs
src/flag/: config.rs  mod.rs  rule.rs  stats.rs  transform.rs
src/flag/transform/: tests.rs
src/info/: mod.rs  report.rs  tests.rs
src/info/report/: tests.rs
src/io/: decoding_reader.rs  encoding.rs  encoding_writer.rs  line_ending.rs  mod.rs
src/mask/: config.rs  mod.rs  stats.rs  transform.rs
src/mask/transform/: tests.rs
src/pipeline/: mod.rs
src/replace/: collision.rs  config.rs  mod.rs  rule.rs  stats.rs  transform.rs
src/replace/collision/: tests.rs
src/replace/config/: tests.rs
src/replace/transform/: tests.rs
src/similarity/: config.rs  dict.rs  mod.rs  rule.rs  stats.rs  transform.rs
src/stats/: tests.rs
src/text/: algorithm.rs  dice.rs  distance.rs  jaro.rs  mod.rs  normalize.rs
src/transform/: mod.rs
tests/: convert_test.rs  extract_test.rs  flag_test.rs  info_test.rs  mask_test.rs  replace_test.rs  similarity_test.rs  split_test.rs
(+11 files in other folders)
