[package]
name = "csv-ops"
version = "0.1.0"
edition = "2024"
authors = ["naka93-gh"]
description = "CSV 処理用の Rust 製 CLI ツール"
license = "MIT OR Apache-2.0"

[dependencies]
clap = { version = "4.6", features = ["derive"] }
csv = "1.4"
encoding_rs = "0.8"
encoding_rs_io = "0.1"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
toml = "1.1"
