[package]
name = "csv-ops"
version = "0.1.2"
edition = "2024"
rust-version = "1.95"
authors = ["naka93-gh"]
description = "CSV 処理用の Rust 製 CLI ツール"
license = "MIT OR Apache-2.0"
repository = "https://github.com/naka93-gh/csv-ops"
keywords = ["csv", "cli", "mask", "japanese"]
categories = ["command-line-utilities", "text-processing"]

[dependencies]
clap = { version = "4.6", features = ["derive"] }
csv = "1.4"
encoding_rs = "0.8"
regex = "1.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
toml = "1.1"
unicode-normalization = "0.1"

[profile.release]
strip = true
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"

[dev-dependencies]
assert_cmd = "2.2"
criterion = { version = "0.8", features = ["html_reports"] }
predicates = "3.1"
rand = "0.10"
tempfile = "3.27"

[[bench]]
name = "mask"
harness = false

[[bench]]
name = "replace"
harness = false

[[bench]]
name = "similarity"
harness = false
